--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="Row" id="Contact">
             
             <div class="Column_2 Column_tall">
-                <img src="images/thumbs/thumbnail4.jpg" alt="Painting">
+                <img src="images/thumbs/thumbnail7.jpg" alt="Jeff Padgett Photography">
             </div>
             
             <div class="Column_1 Column_tall">
