--- a/index.html
+++ b/index.html
@@ -159,6 +159,7 @@
             </div>
             <!--Right column-->
             <div class="Column_2">
+                
                 <a href="https://github.com/TBranscome/Basic_C_sharp_Programs" target="_blank"><img src="images/thumbs/github+icon-1320168274457504277.png" alt="GitHub"></a>
             </div>
               
@@ -189,7 +190,7 @@
         <!--Footer section-->
         <footer>
             <p>
-                <p class="center">Learn to code at: <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
+                <p class="center footerText">Learn to code at: <a href="https://www.learncodinganywhere.com/" target="_blank">The Tech Academy</a></p>
                 <br>
             </p>
         </footer>
