--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
                 </p>
                 <p class="center">
                     You can view my Resume here:
-                    <a href="https://docs.google.com/document/d/1PnRvAfqnLCVv8weWO56pbujSRlp-uMVyL3G7T-H3gbQ/edit?usp=sharing" target="_blank">Resume</a>
+                    <a href="https://docs.google.com/document/d/e/2PACX-1vTvKlZxsAALnnuzanGALvAb_-wbjubeZVYzfmPYyS8-WofUkjtLQpg8ZSmtp1gzGH6eFfGpg1P3S1jI/pub" target="_blank">Resume</a>
                 </p>
                 
             </div>
